--- a/components/auth/login-form.module.scss
+++ b/components/auth/login-form.module.scss
@@ -1,15 +1,60 @@
 .formContainer {
-  margin: 10rem 0 0;
+    font-family: "Lexend";
+    margin: 0 0;
+    font-weight: 400;
+    font-size: 20px;
+    color: #1db0a6;
 }
 
 .form {
-  max-width: 400px;
-  margin: auto auto;
+    max-width: 400px;
+    margin: auto auto;
 }
 
 .footerContainer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.buttonContainer {
+    margin-top: 22px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.button {
+    width: 210px;
+    height: 336px;
+    border-radius: 1rem;
+    border: 1px solid #1db0a6;
+    background-size: 160px 226px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+//Header login
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+//Title
+.title {
+    margin-top: 22px;
+    font-family: "Lexend";
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+//Choose role
+//Greeting
+.greeting {
+    margin-top: 45px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
