--- a/components/user/profile-user.module.scss
+++ b/components/user/profile-user.module.scss
@@ -7,20 +7,20 @@
     color: #000;
 }
 
-// .button {
-//     font-family: Lexend, Helvetica, sans-serif;
-//     width: 220px;
-//     color: #fff;
-//     background-color: #229594;
-//     border-radius: 10px;
-//     font-size: 20px;
-// }
-// .button:hover {
-//     border: 1px solid #229594;
-//     padding: 4px 0 !important;
-//     color: #229594;
-//     background-color: #fff;
-// }
+.button {
+    font-family: Lexend, Helvetica, sans-serif;
+    width: 220px;
+    color: #fff;
+    background-color: #229594;
+    border-radius: 10px;
+    font-size: 20px;
+}
+.button:hover {
+    border: 1px solid #229594;
+    padding: 4px 0 !important;
+    color: #229594;
+    background-color: #fff;
+}
 
 //Date time
 .dateTime {
